# file-kraken

./: Cargo.toml  README.md
src/: app_init.rs  location.rs  main.rs
src/processing/: find_duplicates.rs  mod.rs  scan.rs
src/state/: app_state.rs  duplicate.rs  file.rs  location.rs  mod.rs
src/tabs/: mod.rs  tab_files.rs  tab_locations.rs
src/tabs/tab_files/: mod.rs  tab_files_duplicates.rs  tab_files_overview.rs
src/utils/: dialogs.rs  hashing.rs  mod.rs  parent_path.rs  ui_elements.rs
