[package]
name = "file-kraken"
version = "1.0.1"
edition = "2021"

[dependencies]
catppuccin-egui = { version = "5.2.0", default-features = false, features = ["egui28"] }
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = "0.28.1"
env_logger = "0.11.5"
jwalk = "0.8.1"
log = "0.4.22"
rfd = "0.14.1"
rusqlite = "0.32.1"
sha2 = "0.10.8"
